# MagicSquare_13

./: .gitignore  README.md  pyproject.toml
Prompts/: TODO_readme_creation_prompt.md
Report/: 7. DualTrack_RED_TDD_WorkReport.md  8. Refactoring_PreAnalysis_Report.md  9. Refactor_Commit1_R-L4_Report.md
docs/: Formal_Test_Cases.md  Prompting_BP_15.md
src/magic_square/: __main__.py  boundary.py  constants.py  errors.py  logic.py
src/magic_square.egg-info/: PKG-INFO  SOURCES.txt
src/magic_square/gui/: __init__.py  main_window.py
tests/: prd_constants.py  test_boundary_red_skeleton.py  test_formal_contract.py  test_logic_red_skeleton.py  test_track_a_ui_red.py  test_track_b_logic_red.py
