[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-square"
version = "0.1.0"
description = "4×4 두 빈칸 마방진 완성 — TDD·ECB 연습용 (계약: docs/MagicSquare_4x4_TDD.md)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]
gui = [
  "PyQt6>=6.5",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["magic_square*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source_pkgs = ["magic_square"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]
